# TidyPy4DS

./: README.md  README_EN.md  README_ZH.md  pyproject.toml
.github/workflows/: tests.yml
docs/: functions.md  functions_en.md  notebook.md  notebook_en.md
examples/: 01-why-tidypy.en.ipynb  01-why-tidypy.zh.ipynb  02-core-apis.en.ipynb  02-core-apis.ipynb  03-reshape-and-missing-values.en.ipynb  03-reshape-and-missing-values.ipynb
tests/: test_tidy.py
tidypy/: __init__.py  tidy.py
